# slamcore-utils

./: .gitignore  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  gnss_plugin.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  greetings.yml
hooks/: pre-commit
misc/: check_style.py  lint_code.py
slamcore_utils/: __init__.py  arg_parser.py  data_converter.py  dataset_dir_converter.py  dataset_subdir_writer.py  fs.py  logging.py  math.py  measurement_type.py  openloris_converter.py  progress_bar.py  ros_utils.py  string.py  test_utils.py  utils.py
slamcore_utils/ros2/: __init__.py  conversion_format.py  plugin_utils.py  ros2_converter_plugin.py  ros2_utils.py
slamcore_utils/ros2/ros2_converter_plugins/: gnss.py  nav_path.py
slamcore_utils/scripts/: convert_openloris.py  convert_rosbag2.py  setup_dataset.py
slamcore_utils/share/: setup_dataset.json
slamcore_utils/share/capture_infos/: euroc_capture_info.json  openlorismain_capture_info.json  openlorismarket_capture_info.json  tum1024_capture_info.json  tum512_capture_info.json
tests/: key_inputs.py  test_capture_info_json.py  test_convert_openloris.py  test_fs.py  test_ros2_conversions.py  test_setup_dataset.py
tests/test_data/: faulty_ros2_conversion_config.jsonc  flexible_ros2_conversion.jsonc  flexible_ros2_conversion_config_single_topic_required_non_existent.jsonc  rigid_ros2_conversion2.jsonc  trimmed_rosbag2.json
tests/test_data/executables/: slamcore_convert_rosbag2_flexible_ros2_conversion
tests/test_data/executables/slamcore_convert_openloris_dont_overwrite/: expected_output_0
tests/test_data/executables/slamcore_convert_rosbag2_rigid_ros2_conversion/expected_output/groundtruth0/: data.csv
tests/test_data/executables/slamcore_convert_rosbag2_rigid_ros2_conversion/expected_output/imu0/: gyro.csv
tests/test_data/executables/slamcore_convert_rosbag2_rigid_ros2_conversion/expected_output/ir1/: data.csv
tests/test_data/executables/slamcore_convert_rosbag2_rigid_ros2_conversion/expected_output/odometry0/: data.csv
tests/test_data/executables/slamcore_convert_rosbag2_std_usage/expected_output/: metadata.txt
tests/test_data/executables/slamcore_convert_rosbag2_std_usage/expected_output/imu0/: acc.csv
tests/test_data/executables/slamcore_convert_rosbag2_with_plugin/: cfg.jsonc  distance_travelled_conversion_plugin.py
tests/test_data/executables/slamcore_convert_rosbag2_with_plugin/expected_output/: metadata.txt
tests/test_data/executables/slamcore_convert_rosbag2_with_plugin/expected_output/distance_travelled0/: data.csv
tests/test_data/executables/slamcore_convert_rosbag2_with_plugin/expected_output/ir0/: data.csv
tests/test_data/sample_dataset/: aligned_depth.txt  color.txt  d400_accelerometer.txt  d400_gyroscope.txt  depth.txt  fisheye1.txt  fisheye2.txt  groundtruth.txt  odom.txt  sensors.yaml  t265_accelerometer.txt  t265_gyroscope.txt  trans_matrix.yaml
tests/test_data/sample_dataset_converted/cam0/: data.csv
tests/test_data/sample_dataset_converted/depth0/: data.csv
tests/test_data/sample_dataset_converted/imu0/: data.csv
tests/test_data/sample_dataset_converted/ir1/: data.csv
tests/test_data/sample_dataset_converted/pose0/: data.csv
tests/test_data/trimmed_rosbag2/: metadata.yaml
