[tool.poetry]
name = "slamcore_utils"
version = "0.1.8a1"
description = "SLAMcore SLAM Utilities"
authors = ["Nikos Koukis <nikolaos@slamcore.com>"]
license = "BSD License"
readme = "README.md"

homepage = "https://github.com/slamcore/slamcore_utils"
repository = "https://github.com/slamcore/slamcore_utils"
classifiers = [
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: BSD License",
  "Operating System :: Unix",
]

[tool.poetry.dependencies]
python = ">=3.6.8,<3.12"
questionary = "^1.10.0"
prompt-toolkit = ">3.0,<=3.0.23"
numpy = [ { version = "^1.19.5", python = "<3.9" }, { version = "*", python = ">=3.9" } ]
tqdm = { version = "^4.64.0", optional = true }
pillow = { version = "^7.2.0", optional = true }
lark = { version = "^1.1.5", optional = true }
pyyaml = { version = "^6.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = { version = "*", allow-prereleases = true }
isort = "^5.10.1"
mock = "^4.0.3"
pdbpp = "^0.10.3"
mypy = ">=0.942"
types-setuptools = "^57.4.12"
pyright = "*"
pyfakefs = "^4.5.6"
pexpect = "^4.8.0"
types-Pillow = "^9.5.0"

[tool.poetry.scripts]
slamcore-convert-openloris = "slamcore_utils.scripts.convert_openloris:main"
slamcore-setup-dataset = "slamcore_utils.scripts.setup_dataset:main"
slamcore-convert-rosbag2 = "slamcore_utils.scripts.convert_rosbag2:main"

[tool.poetry.extras]
tqdm = ["tqdm"]
ros2 = ["pillow", "lark", "pyyaml"]

[tool.isort]
line_length = 95
include_trailing_comma = true
multi_line_output = 3

[tool.black]
line-length = 95
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "geometry_msgs.msg",
  "numpy",
  "pexpect",
  "pytest",
  "rclpy.serialization",
  "rosbag2_py",
  "rosidl_runtime_py.utilities",
  "sensor_msgs.msg",
  "tqdm",
]
ignore_missing_imports = true

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.8"
pythonPlatform = "Linux"

[tool.ruff]
line-length = 95
target-version = "py38"

[tool.pytest.ini_options]
addopts = ["-v", "--doctest-modules"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

